--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,6 @@
     </nav>
     <%= yield %>
 
-    Copyright 2023 SugarBunches by YoursTruly
+    Copyright 2023 HoneyBooBoo by YoursTruly
   </body>
 </html>
