--- a/app/views/photos_templates/photos_details.html.erb
+++ b/app/views/photos_templates/photos_details.html.erb
@@ -1,2 +1,78 @@
-<h1>HELLO</h1>
+<h1>Photo Details</h1>
 
+<dl>
+  <dt>Image</dt>
+
+<td>
+<img src="<%= @the_photo.image %>">
+</td>
+<dt>Caption</dt>
+<dd>
+  <p><%= @the_photo.caption%>
+  </dd>
+<td>
+
+<dt>Owner</dt>
+<dd>
+  <p><%= @the_photo.poster.username%>
+  </dd>
+<td>
+
+<dt>Posted</dt>
+<dd>
+  <p><%= @the_photo.created_at%>
+  </dd>
+
+  <dt>Edit photo</dt>
+  <dd>
+    <form action="/update_photo/777">
+      <label for="browser_image">Image</label>
+      <input id="browser_image" type="text" name="input_image" placeholder="Enter a URL for the image..." value="https://robohash.org/dolorehicincidunt.png?size=300x300&amp;set=set1">
+
+      <label for="browser_caption">Caption</label>
+      <textarea id="browser_caption" name="input_caption" placeholder="Enter a caption for the photo...">Once you’ve accepted your flaws, no one can use them against you.</textarea>
+
+      <button>Update photo</button>
+    </form>
+  </dd>
+
+  <dt>Delete photo</dt>
+  <dd>
+    <a href="/delete_photo/<%= @the_photo.id %>;">
+      Delete this photo
+    </a>
+  </dd>
+</dl>
+
+<h2>Comments</h2>
+
+<table>
+  <tr>
+    <th>Commenter</th>
+    <th>Comment</th>
+    <th>Posted</th>
+  </tr>
+
+  <% @the_photo.comments.each do |comentarios|%>
+  <tr>
+    <td>
+     <%= comentarios.commenter.username %>
+    </td>
+
+    <td>
+        <%= comentarios.body %>
+    </td>
+
+    <td>
+   <%= comentarios.created_at%>
+    </td>
+  </tr>
+  
+  <% end %>
+  
+</table>
+
+
+
+
+<h3>Add a new comment<h3>
