photo buttons beginning

--- a/app/views/photos_templates/photo_index.html.erb
+++ b/app/views/photos_templates/photo_index.html.erb
@@ -1,6 +1,21 @@
 <h1>List of photos</h1>
 
-<% @list_of_photos %>
+<hr>
+
+<form>
+<label>Image</label>
+    <input id="image_box">
+<label>Caption</label>
+    <textarea id="caption_box"></textarea>
+
+    <label>Owner ID</label>
+
+    <input id="owner_id_box">
+
+    <button>Add Photo</button>
+
+</form>
+
 
 <table border="1">
 <tr>
