--- a/app/views/photos_templates/photo_index.html.erb
+++ b/app/views/photos_templates/photo_index.html.erb
@@ -2,15 +2,16 @@
 
 <hr>
 
-<form>
-<label>Image</label>
-    <input id="image_box">
-<label>Caption</label>
-    <textarea id="caption_box"></textarea>
+<form action="/insert_photo"> 
+<label for="image_box">Image</label>
+    <input id="image_box" name="query_image">
 
-    <label>Owner ID</label>
+<label for="caption_box">Caption</label>
+    <textarea id="caption_box" name="query_caption"></textarea>
 
-    <input id="owner_id_box">
+    <label for ="owner_id_box">Owner ID</label>
+
+    <input id="owner_id_box" name="query_owner_id">
 
     <button>Add Photo</button>
 
