--- a/app/views/photos_templates/photo_index.html.erb
+++ b/app/views/photos_templates/photo_index.html.erb
@@ -4,20 +4,20 @@
 
 <form action="/insert_photo"> 
 <label for="image_box">Image</label>
-    <input id="image_box" name="query_image">
+    <input id="image_box"type="text" name="query_image" placeholder="Enter a URL for the image...">
 
 <label for="caption_box">Caption</label>
-    <textarea id="caption_box" name="query_caption"></textarea>
+    <textarea id="caption_box" name="query_caption" placeholder="Enter a caption for the photo..."></textarea>
 
     <label for ="owner_id_box">Owner ID</label>
 
-    <input id="owner_id_box" name="query_owner_id">
+    <input id="owner_id_box" type="text" name="query_owner_id" placeholder="Enter and ID of a User">
 
     <button>Add Photo</button>
 
 </form>
 
-
+<hr>
 <table border="1">
 <tr>
   <th>
